# MFP

./: .gitmodules  CMakeLists.txt  README.md  testcase.in
src/: data.h  data_gen.cc  main.cc  max_flow_net.h  spfa.h  test_mf.cc  test_spfa.cc
